[es] l10n update of newsletter.lang to prevent a identical string to appear on http://l10n.mozilla-community.org/~pascalc/langchecke
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106725 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/newsletter.lang
+++ b/es-ES/newsletter.lang
@@ -178,7 +178,7 @@ Gracias por contarnos por qué te vas.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Boletines de Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
