[es-ES] added {ok} next to an identical string to prevent appearing on http://l10n.mozilla-community.org
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106726 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/firefoxtesting.lang
+++ b/es-ES/firefoxtesting.lang
@@ -14,7 +14,7 @@ Descarga y prueba las futuras versiones de Firefox. Experimenta las innovaciones
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
