--- a/cs/snippets.lang
+++ b/cs/snippets.lang
@@ -130,18 +130,18 @@ Firefox obsahuje nové vlastnosti, které vám umožní dokončit váš příšt
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Máte rádi Firefox Beta? <a href="%s">Pozvěte své přátele</a>, aby také získali přehled, co nového se pro Firefox chystá.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Používám Firefox Beta a mám přehled o nejnovějších funkcích, které přichází do Firefoxu. <a href="%s">Vyzkoušejte</a>. 
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Děkujeme, že používáte Firefox Beta a pomáháte jej učinit ještě lepším. Nyní máte možnost <a href="%s">pozvat své přátele</a>, aby si jej také vyzkoušeli.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Používám Firefox Beta, pomáhám testovat nejnovější funkce a činím Firefox lepším. <a href="%s">Vyzkoušejte také</a>.
 
 
