[es-ES] updated video_fx13.lang for What's New in Firefox 13 page. (The subtitle file was already uploaded on Amara.org).
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106745 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/videos/video_fx13.lang
+++ b/es-ES/videos/video_fx13.lang
@@ -1,42 +1,63 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Novedades en Firefox] Ahora es más fácil y rápido llegar adonde quieres ir con el último Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Gracias al nuevo diseño de Inicio, puedes acceder y navegar fácilmente por las opciones que más usas,
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+como descargas, marcadores, historial, complementos, Sync y configuración.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[La página Nueva pestaña] También hemos implementado mejoras a tu página Nueva pestaña.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+La página Nueva pestaña te permite navegar fácilmente por las webs que sueles visitar con un solo clic.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Para comenzar a usar la página Nueva pestaña, crea una nueva pestaña haciendo clic en el '+', en la parte superior de tu navegador.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+La página Nueva pestaña mostrará una miniatura de las webs más recientes o frecuentes según el historial de la Barra alucinante.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Puedes personalizar tu página Nueva pestaña arrastrando las miniaturas para cambiar el orden.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Haz clic sobre la chincheta para bloquear la ubicación de ese sitio o sobre el botón 'X' para eliminarlo.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+También puedes hacer clic sobre el icono 'rejilla', en la parte superior derecha, para volver a tener la página Nueva pestaña en blanco.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+¡Obtén el último Firefox y comienza a usar todas estas nuevas características ya!
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
