l10n: cy, snippets update by Rhoslyn Prys
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106769 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/cy/snippets.lang
+++ b/cy/snippets.lang
@@ -130,18 +130,18 @@ Mae gan Firefox nodweddion newydd sy'n gwneud mynd i'ch tasg nesaf yn gynt nag e
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Hoffi Firefox Beta? <a href="%s">Gwahoddwch eich ffrindiau</a> i gael gweld beth sydd ar y ffordd gan Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Rwy'n defnyddio Firefox Beta i weld beth yw'r nodweddion a'r datblygiadau diweddaraf sy'n dod i Firefox cyn bo hir. <a href="%s">Cymrwch olwg</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Diolch am ddefnyddio Firefox Beta i wneud Firefox yn fwy rhyfeddol. Nawr <a href="%s">gwahoddwch eich ffrindiau</a> i roi cynnig arno.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Rwy'n defnyddio Firefox Beta i roi prawf ar y nodweddion diweddaraf er mwyn gwenud Firefox yn fwy rhyfeddol. <a href="%s">Rhowch gynnig arno</a>.
 
 
