Wolof: update to 100% for all .lang file
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106770 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/wo/snippets.lang
+++ b/wo/snippets.lang
@@ -127,16 +127,16 @@ Firefox am na bees bees yuy gëna gaawal sa liggéey! <a href="%">Xoolal wideyoo
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Bëgg Firefox Beta? <a href="%s">woowal say xarit</a> Ñu am gis gis ci li Firefox nara indi.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Damay jëfandikoo Firefox Beta ndax jot ci bees bees yi ak soste yiy 7ëw leegi Firefox. <a href="%s">Check it out</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Jërajëf ci li ngay jëfandikoo Firefox Beta te di ñu dimmali ci Firefox gëna yéeme. Leegi <a href="%s">wool say xarit</a> ñu jéem ko.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Damay jëfandikoo Firefox Beta ngir dimmali teste bees bees yu mujj yi te def Firefox mu gëna yéeme. <a href="%s">Joxe ko ñu eseeye ko</a>.
