Missing strings localized
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106779 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/da/mobile.lang
+++ b/da/mobile.lang
@@ -34,7 +34,7 @@ Få adgang til din Firefox' historik, bogmærker og åbne faneblade på din iPho
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Download Firefox til <span>mobilen</span>
 
 
 ;Want to test the latest features?
@@ -50,7 +50,7 @@ Download Beta til Android
 
 
 ;Download
-Download
+Download {ok}
 
 
 ;for
@@ -73,7 +73,7 @@ Udviklingsværktøjer
 Du kan installere den mobile version af Firefox på din stationære computer, hvis du vil hjælpe med at teste, give feedback eller lave tilføjelser.
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Få forbindelse med Firefox til mobilen:
 
 
 ;Monthly newsletter
@@ -125,6 +125,6 @@ Download og test det build, der passer dig bedst.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Se alle vores kanaler for mobilen »
 
 
