l10n: fa, update snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106800 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fa/snippets.lang
+++ b/fa/snippets.lang
@@ -126,22 +126,21 @@
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-
+فایرفاکس امکانات جدیدی دارد تا بتوانید کار بعدی خود را حتی سریع‌تر از قبل انجام دهید! <a href="%">نگاهی به ویدئو بندازید تا بیشتر آگاه شوید.</a>
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+عاشق فایرفاکس بتا هستید؟ <a href="%s">دوستان خود را دعوت کنید</a> تا گوشه چشمی از آنچه بزودی در فایرفاکس خواهد آمد را ببینند.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+من از فایرفاکس بتا استفاده می‌کنم تا گوشه چشمی از آخرین امکانات و خلاقیت‌هایی که بزودی به فایرفاکس اضافه می‌شوند را ببینم. <a href="%s">نگاهی بندازید</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+بخاطر استفاده از فایرفاکس بتا برای هر چه بهتر شدنش سپاسگذاریم. حالا <a href="%s">دوستان خود را دعوت کنید</a> تا آن را امتحان کنند.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+من از فایرفاکس بتا استفاده می‌کنم تا به آزمایش آخرین امکانات کمک کنم و فایرفاکس را عالی‌تر از همیشه کنم. <a href="%s">امتحان کنید</a>.
 
 
