l10n: kk, various updates by jambooop@mail.ru and Timur Timirkhanov
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106810 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/kk/whatsnew.lang
+++ b/kk/whatsnew.lang
@@ -2,62 +2,61 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Алақай! Сізде Firefox-тың соңғы нұсқасы тұр.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Сіздің Firefox ескірген.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Қауіпсіздік мақсатында, біз <a href="{url}">соңғы әрі ең жақсы нұсқасына</a> дейін жаңартуды ұсынамыз.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Сіз Firefox-тың белгісіз нұсқасын қолдап тұрсыз.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Қауіпсіздік мақсатында, біз <a href="{url}">соңғы әрі ең жақсы нұсқасына</a> дейін жаңартуды ұсынамыз.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Тапсырмалардың ауысуы<br/>бір кезде жылдам болды
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Firefox-тың жаңа мүмкіндектері жұмысты қалайша жылдам және тиімді жасайтының байқаңыз.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">Жаңа бет мүмкіндіктер</a> туралы көбірек біліңіз »
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Біздің <a href="{url}">жаңартылған үй парағы</a> туралы көбірек біліңіз »
 
 
 ;Keep in touch
-Keep in touch
+Байланыста болыңыз
 
 
 ;Keep it moving
-Keep it moving
+Мобильді болыңыз 
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Firefox-ты  <b>Android үшін</b> жүктеп алу »
 
 
 ;Keep it going
-Keep it going
+Жаңалықтарды бақылаңыз
 
 
 ;Join Mozilla
-Join Mozilla
+Mozilla-ға кіру 
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
+Android роботы <a href="%s">Google-мен пайдалануға берілген</a> және оның негізінде өңделіп, <a href="%s">Creative Commons 3.0 Attribution лицензияға</a> сай қолданылады.
 
