--- a/kk/snippets.lang
+++ b/kk/snippets.lang
@@ -128,3 +128,20 @@ Firefox-ты бірнеше компьютерлерде қолданасыз б
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
 Firefox-та сіздің келесі тапсырманы орындауға жаңа мүмкіндітер бар! <a href="%">Көбірек білу үшін бейнені көріңіз.</a>
 
+
+;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+
+
+;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+
+
+;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+
+
+;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+
+
